objects/Implementation_Survey_Response__c.object
<CustomObject>
    <description>This object tracks pre-implementation survey responses that are captured through pre-implementation survey forms. The forms are sent to prospects and SIs during pre-sales activities.</description>
    <fields>
        <fullName>ALM__c</fullName>
        <description>This is the ALM that the prospect is using. If you&apos;re adding new picklist values to this field, make sure that you update the Provider Names Global Value Set.</description>
        <inlineHelpText>This is the ALM that the prospect is using.</inlineHelpText>
        <label>ALM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Jira</fullName>
                </value>
                <value>
                    <fullName>VersionOne</fullName>
                </value>
                <value>
                    <fullName>Rally</fullName>
                </value>
                <value>
                    <fullName>Agile Accelerator</fullName>
                </value>
                <value>
                    <fullName>ScrumDo</fullName>
                </value>
                <value>
                    <fullName>TargetProcess</fullName>
                </value>
                <value>
                    <fullName>Other/Multiple Tools</fullName>
                </value>
                <value>
                    <fullName>We aren’t currently using an ALM tool.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALM_on_Premise__c</fullName>
        <description>Is the ALM being used on premise?</description>
        <inlineHelpText>Is the ALM being used on premise?</inlineHelpText>
        <label>ALM on Premise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Executive_Email__c</fullName>
        <description>This is the Account Executive&apos;s email as reported by the person who submitted the ISR.</description>
        <inlineHelpText>This is the Account Executive&apos;s email as reported by the person who submitted the ISR.</inlineHelpText>
        <label>Account Executive Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <description>This is the Account Executive reported by the person who submitted the ISR.</description>
        <inlineHelpText>This is the Account Executive reported by the person who submitted the ISR.</inlineHelpText>
        <label>Account Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Account that the ISR relates to.</description>
        <inlineHelpText>This is the Account that the ISR relates to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementation Survey Responses</relationshipLabel>
        <relationshipName>Implementation_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Release_Information__c</fullName>
        <description>This is additional information reported on the prospect&apos;s release activities.</description>
        <inlineHelpText>This is additional information reported on the prospect&apos;s release activities.</inlineHelpText>
        <label>Additional Release Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrators__c</fullName>
        <description>Number of Administrators reported.</description>
        <inlineHelpText>Number of Administrators reported.</inlineHelpText>
        <label>Administrators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adoption_Percentage__c</fullName>
        <description>Captures the percentage of features the customer estimates that their end users are adopting</description>
        <inlineHelpText>Captures the percentage of features the customer estimates that their end users are adopting</inlineHelpText>
        <label>Adoption Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Business_Value__c</fullName>
        <description>This is a free text field for the customer to describe the business value they hope to achieve from implementing Copado and how they will measure the success of their Copado implementation.</description>
        <inlineHelpText>This is a free text field for the customer to describe the business value they hope to achieve from implementing Copado and how they will measure the success of their Copado implementation.</inlineHelpText>
        <label>Anticipated Business Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Can_Refresh_Sandboxes__c</fullName>
        <description>Can the customer refresh sandboxes prior to going live with Copado?</description>
        <inlineHelpText>Can the customer refresh sandboxes prior to going live with Copado?</inlineHelpText>
        <label>Can Refresh Sandboxes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>It&apos;s Complicated</fullName>
                    <isActive>false</isActive>
                    <label>It&apos;s Complicated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Use_External_IDs__c</fullName>
        <description>Can the prospect allocate External ID fields for ADD?</description>
        <inlineHelpText>Can the prospect allocate External ID fields for ADD?</inlineHelpText>
        <label>Can Use External IDs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Whitelist_Copado_IPs__c</fullName>
        <description>Can Copado IP addresses be whitelisted?</description>
        <inlineHelpText>Can Copado IP addresses be whitelisted?</inlineHelpText>
        <label>Can Whitelist Copado IPs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>This is the contact email for the person who completed the ISR.</description>
        <inlineHelpText>This is the contact email for the person who completed the ISR.</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>This is the customer contact who completed the ISR.</description>
        <inlineHelpText>This is the customer contact who completed the ISR.</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Products_Requested__c</fullName>
        <description>These are the products that the prospect is interested in implementing.</description>
        <inlineHelpText>These are the products that the prospect is interested in implementing.</inlineHelpText>
        <label>Copado Products Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Agile Delivery</fullName>
                </value>
                <value>
                    <fullName>Copado DX</fullName>
                </value>
                <value>
                    <fullName>Copado Continuous Delivery</fullName>
                </value>
                <value>
                    <fullName>Copado Selenium Testing</fullName>
                </value>
                <value>
                    <fullName>Copado Compliance Hub</fullName>
                </value>
                <value>
                    <fullName>Copado CLI</fullName>
                </value>
                <value>
                    <fullName>Copado Data Deploy</fullName>
                </value>
                <value>
                    <fullName>DevOps 360 Analytics</fullName>
                </value>
                <value>
                    <fullName>Value Stream Maps</fullName>
                </value>
                <value>
                    <fullName>Vlocity Deployment Integration</fullName>
                </value>
                <value>
                    <fullName>Copado Core Only</fullName>
                </value>
                <value>
                    <fullName>Advanced Data Deployer</fullName>
                    <isActive>false</isActive>
                    <label>Advanced Data Deployer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_DevOps_Maturity__c</fullName>
        <description>Customer assesses their team’s current DevOps maturity level on a 1-5 scale with 5 representing the highest level</description>
        <inlineHelpText>Customer assesses their team’s current DevOps maturity level on a 1-5 scale with 5 representing the highest level</inlineHelpText>
        <label>Current DevOps Maturity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Production_Release_Frequency__c</fullName>
        <description>This is how frequently the prospect release changes to Production currently.</description>
        <inlineHelpText>This is how frequently the prospect release changes to Production currently.</inlineHelpText>
        <label>Current Production Release Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Twice Monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-annually</fullName>
                </value>
                <value>
                    <fullName>Our production org is not live yet.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Object_Field_Usage__c</fullName>
        <description>How are custom objects and custom fields used if at all?</description>
        <inlineHelpText>How are custom objects and custom fields used if at all?</inlineHelpText>
        <label>Custom Object Field Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Implementation_Lead__c</fullName>
        <description>Will list the name of a specific customer or partner contact that will be leading the customer’s Copado implementation</description>
        <inlineHelpText>Will list the name of a specific customer or partner contact that will be leading the customer’s Copado implementation</inlineHelpText>
        <label>Customer Implementation Lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Usage__c</fullName>
        <description>How Data Loader is currently being used if at all.</description>
        <inlineHelpText>How Data Loader is currently being used if at all.</inlineHelpText>
        <label>Data Loader Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developers__c</fullName>
        <description>Number of Developers reported.</description>
        <inlineHelpText>Number of Developers reported.</inlineHelpText>
        <label>Developers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Git_Behind_Firewall__c</fullName>
        <description>Is Git behind a firewall?</description>
        <inlineHelpText>Is Git behind a firewall?</inlineHelpText>
        <label>Git Behind Firewall</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Git_Knowledge__c</fullName>
        <description>Customer assesses their team’s level of Git expertise on a 1-5 scale with 5 representing the highest level</description>
        <inlineHelpText>Customer assesses their team’s level of Git expertise on a 1-5 scale with 5 representing the highest level</inlineHelpText>
        <label>Git Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Git_Provider__c</fullName>
        <description>This is the Git provider being used currently. If you&apos;re adding new picklist values to this field, make sure that you update the Provider Names Global Value Set.</description>
        <inlineHelpText>This is the Git provider being used currently.</inlineHelpText>
        <label>Git Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Github</fullName>
                </value>
                <value>
                    <fullName>Bitbucket</fullName>
                </value>
                <value>
                    <fullName>Gitlab</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>We are not currently using a version control system.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Spent_Releasing__c</fullName>
        <description>This is how many hours the customer is currently spending with release activities.</description>
        <inlineHelpText>This is how many hours the customer is currently spending with release activities.</inlineHelpText>
        <label>Hours Spent Releasing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Package_Chosen__c</fullName>
        <description>This is the Copado Implementation Package that is being recommended.</description>
        <inlineHelpText>This is the Copado Implementation Package that is being recommended.</inlineHelpText>
        <label>Implementation Package Chosen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_PS_Offerings__c</fullName>
        <label>Interested PS Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Program Architect</fullName>
                </value>
                <value>
                    <fullName>Night and Weekend Release Support</fullName>
                </value>
                <value>
                    <fullName>DevOps 360 Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_ALM_or_Git_Instances__c</fullName>
        <description>If the ALM or Git is on premise, will you be connecting Copado to multiple instances on different servers? Please explain if applicable or include &quot;N/A&quot;.</description>
        <inlineHelpText>If the ALM or Git is on premise, will you be connecting Copado to multiple instances on different servers? Please explain if applicable or include &quot;N/A&quot;.</inlineHelpText>
        <label>Multiple ALM or Git Instances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_ALM_User__c</fullName>
        <description>Can you set a named user with credentials for your ALM?</description>
        <inlineHelpText>Can you set a named user with credentials for your ALM?</inlineHelpText>
        <label>Named ALM User</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Release_Date__c</fullName>
        <description>When is your next Salesforce release date to Production?</description>
        <inlineHelpText>When is your next Salesforce release date to Production?</inlineHelpText>
        <label>Next Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Production_Orgs__c</fullName>
        <description>How many Production Orgs would be included in the initial Copado project.</description>
        <inlineHelpText>How many Production Orgs would be included in the initial Copado project.</inlineHelpText>
        <label>Number of Production Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Release_Processes__c</fullName>
        <description>Captures the number of different release processes the customer is currently using</description>
        <inlineHelpText>Captures the number of different release processes the customer is currently using</inlineHelpText>
        <label>Number of Release Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Salesforce_Users__c</fullName>
        <description>Captures the number of active Salesforce users in the customer’s production orgs</description>
        <inlineHelpText>Captures the number of active Salesforce users in the customer’s production orgs</inlineHelpText>
        <label>Number of Salesforce Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Teams__c</fullName>
        <description>How many different teams will be going live with Copado?</description>
        <inlineHelpText>How many different teams will be going live with Copado?</inlineHelpText>
        <label>Number of Teams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Opportunity that the ISR relates to.</description>
        <inlineHelpText>This is the Opportunity that the ISR relates to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Implementation Survey Responses</relationshipLabel>
        <relationshipName>Implementation_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Tools_Used__c</fullName>
        <description>These are additional providers and tools used that the prospect reported.</description>
        <inlineHelpText>These are additional providers and tools used that the prospect reported.</inlineHelpText>
        <label>Other Tools Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Incidents__c</fullName>
        <description>Captures the number of production incidents the customer experiences per year</description>
        <inlineHelpText>Captures the number of production incidents the customer experiences per year</inlineHelpText>
        <label>Production Incidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>These are the products that the customer responded with.</description>
        <inlineHelpText>These are the products that the customer responded with.</inlineHelpText>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Provider_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Names__c</fullName>
        <description>This is a list of Providers that the customer responded with.</description>
        <inlineHelpText>This is a list of Providers that the customer responded with.</inlineHelpText>
        <label>Provider Names</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Provider_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Engineers__c</fullName>
        <description>Number of QA Engineers reported.</description>
        <inlineHelpText>Number of QA Engineers reported.</inlineHelpText>
        <label>QA Engineers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Managers__c</fullName>
        <description>Number of Release Managers reported.</description>
        <inlineHelpText>Number of Release Managers reported.</inlineHelpText>
        <label>Release Managers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Teams__c</fullName>
        <description>Captures the number of release teams that will be using Copado</description>
        <inlineHelpText>Captures the number of release teams that will be using Copado</inlineHelpText>
        <label>Release Teams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI_Partner_Email__c</fullName>
        <description>SI partner&apos;s email address.</description>
        <inlineHelpText>SI partner&apos;s email address.</inlineHelpText>
        <label>SI Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SI_Partner__c</fullName>
        <description>This is the SI Partner(s) the person submitting the ISR listed.</description>
        <inlineHelpText>This is the SI Partner(s) the person submitting the ISR listed.</inlineHelpText>
        <label>SI Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_Used__c</fullName>
        <description>Is SSO currently being used?</description>
        <inlineHelpText>Is SSO currently being used?</inlineHelpText>
        <label>SSO Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Edition__c</fullName>
        <description>This is the Salesforce edition being used.</description>
        <inlineHelpText>This is the Salesforce edition being used.</inlineHelpText>
        <label>Salesforce Edition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Essentials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Expertise__c</fullName>
        <description>Customer assesses their team’s level of Salesforce expertise on a 1-5 scale with 5 representing the highest level</description>
        <inlineHelpText>Customer assesses their team’s level of Salesforce expertise on a 1-5 scale with 5 representing the highest level</inlineHelpText>
        <label>Salesforce Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scoping_Completed_Date__c</fullName>
        <label>Scoping Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Security_Concerns__c</fullName>
        <description>What kinds of security concerns does the prospect have?</description>
        <inlineHelpText>What kinds of security concerns does the prospect have?</inlineHelpText>
        <label>Security Concerns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selenium_Testing_and_Lightning__c</fullName>
        <description>Captures whether a prospect is interested in incorporating automated testing into their DevOps process</description>
        <inlineHelpText>Captures whether a prospect is interested in incorporating automated testing into their DevOps process</inlineHelpText>
        <label>Interested in Automated Testing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Git_Permissions__c</fullName>
        <description>Are there any special Git permissions that we need to know about?</description>
        <inlineHelpText>Are there any special Git permissions that we need to know about?</inlineHelpText>
        <label>Special Git Permissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Code_Analysis_Tool__c</fullName>
        <description>What static code analysis is presently used.</description>
        <inlineHelpText>What static code analysis is presently used.</inlineHelpText>
        <label>Static Code Analysis Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Implementation_Survey_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Go_Live_Date__c</fullName>
        <description>This is the target go-live date reported by the prospect.</description>
        <inlineHelpText>This is the target go-live date reported by the prospect.</inlineHelpText>
        <label>Target Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Go_Live_Influencer__c</fullName>
        <description>Is there anything that is influencing the target go-live date?</description>
        <inlineHelpText>Is there anything that is influencing the target go-live date?</inlineHelpText>
        <label>Target Go-Live Influencer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Org_ID__c</fullName>
        <label>Target Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Production_Release_Frequency__c</fullName>
        <description>This is how frequently the prospect wants to release changes to Production.</description>
        <inlineHelpText>This is how frequently the prospect wants to release changes to Production.</inlineHelpText>
        <label>Target Production Release Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continuously</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Twice Monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_Recover__c</fullName>
        <description>Captures the average time to recover from a production incident in hours</description>
        <inlineHelpText>Captures the average time to recover from a production incident in hours</inlineHelpText>
        <label>Time to Recover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Commitment__c</fullName>
        <description>Captures whether the customer will commit to all Copado users completing approximately 10 hours of self-paced learning and 4 hours of live training</description>
        <inlineHelpText>Captures whether the customer will commit to all Copado users completing approximately 10 hours of self-paced learning and 4 hours of live training</inlineHelpText>
        <label>Training Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>